internal/gatewayapi/testdata/accesslog-types.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    telemetry:
      accessLog:
        settings:
          - format:
              type: Text
              text: |
                Route access log: [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE%\n
            sinks:
              - type: File
                file:
                  path: /dev/stdout
            type: Route
          - format:
              type: Text
              text: |
                Listener access log: [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE%\n
            sinks:
              - type: File
                file:
                  path: /dev/stdout
            type: Listener
          - format:
              type: Text
              text: |
                Upstream access log: [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE%\n
            sinks:
              - type: File
                file:
                  path: /dev/stdout
            type: Upstream
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: http-route-1
    spec:
      parentRefs:
        - name: gateway-1
          namespace: envoy-gateway
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
